# rules_go-issue2991

./: BUILD.bazel  WORKSPACE  nogo.json
