load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "nogo")


nogo(
    name = "default_nogo",
    visibility = ["//visibility:public"],
    config = ":nogo.json",
    deps = [
        "@org_golang_x_tools//go/analysis/passes/atomic:go_default_library",
    ],
)


proto_library(
    name = "foo_proto",
    srcs = ["foo.proto"],
)

go_proto_library(
    name = "foo_go_proto",
    importpath = "github.com/bazelbuild/rules_go/tests/core/go_proto_library/foo",
    proto = ":foo_proto",
)

genquery(
    name = "deps",
    expression = "kind('proto_library', deps(//:foo_go_proto))",
    scope = ["//:foo_go_proto"],
)
